Merged branches/schemarenovation2 back into trunk.